--- a/templates/profiles/profile_base.html
+++ b/templates/profiles/profile_base.html
@@ -23,7 +23,7 @@
                         <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_events }}" href="{% url 'profile_events' %}">Cursos y Eventos</a>
                     </li>
                     <li class="my-2">
-                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_bookmarks }}" href="{% url 'profile_bookmarks' %}">Guardados</a>
+                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_bookmarks }}" href="{% url 'profile_bookmarks' %}">Favoritos</a>
                     </li>
                     <li class="mt-2">
                         <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_certificates }}" href="{% url 'profile_certificates' %}">Certificados</a>
