--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-  <!-- ====================================
-  ———	BREADCRUMB
-  ===================================== -->
+<!-- ====================================
+———	BREADCRUMB
+===================================== -->
   <section class="breadcrumb-bg" style="background-image: url('https://www.legalexecutiveinstitute.com/wp-content/uploads/2016/04/blockchain.jpg'); ">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
-          <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana criptomonedas compartiendo conocimiento. </h1>
+          <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana compartiendo conocimiento. </h1>
         </div>
       </div>
     </div>
@@ -22,29 +22,26 @@
 
 <section class="pt-7 pb-7 pt-md-10">
 	<div class="container">
-		<form class="shadow-sm rounded mb-8">
-			<div class="input-group input-group-lg">
-				<div class="input-group-prepend">
-					<span class="input-group-text bg-light border-0 px-4">
-						<i class="fa fa-search text-muted font-size-18" aria-hidden="true"></i>
-					</span>
-				</div>
-				<input type="text" class="form-control bg-light border-0 form-control-lg" aria-label="Amount (to the nearest dollar)"
-				 placeholder="Cursos / Eventos / Conversaciones" required="">
-{#				<div class="input-group-append">#}
-{#					<button type="submit" class="btn shadow-none btn-lg btn-info text-uppercase">En Persona</button>#}
+{#		<form class="shadow-sm rounded mb-8">#}
+{#			<div class="input-group input-group-lg">#}
+{#				<div class="input-group-prepend">#}
+{#					<span class="input-group-text bg-light border-0 px-4">#}
+{#						<i class="fa fa-search text-muted font-size-18" aria-hidden="true"></i>#}
+{#					</span>#}
 {#				</div>#}
-                <div class="input-group-append">
-					<button type="submit" class="btn shadow-none btn-lg btn-info text-uppercase">Buscar</button>
-				</div>
-			</div>
-		</form>
-{#        <p>Configura tu perfil para localizar el mapa en tu ciudad / Cambiar localizacion del mapa</p>#}
-{##}
-{#        <div class="media mb-5">#}
-{#            <img src= "https://miro.medium.com/max/4064/1*qYUvh-EtES8dtgKiBRiLsA.png" alt="Image">#}
-{#        </div>#}
-{#        <div class="mb-10" id="map" style="width:100%; height:420px;"></div>#}
+{#				<input type="text" class="form-control bg-light border-0 form-control-lg" aria-label="Amount (to the nearest dollar)"#}
+{#				 placeholder="Cursos / Eventos / Conversaciones" required="">#}
+{#                <div class="input-group-append">#}
+{#					<button type="submit" class="btn shadow-none btn-lg btn-info text-uppercase">Buscar</button>#}
+{#				</div> TODO FUNCIONALIDAD DE BUSQUEDA #}
+{#			</div>#}
+{#		</form>#}
+        <div class="text-sm-right mt-6">
+          <button type="submit" class="btn btn-warning text-uppercase"
+                  onclick="location.href = '{% url 'event_create' %}' ">
+            Crear Nuevo Curso o Evento
+          </button>
+        </div>
         <h2 class="text-capitalize text-muted font-weight-bold mb-0">Actividad Reciente: </h2>
 	</div>
 </section>
