--- a/templates/profiles/profile_content.html
+++ b/templates/profiles/profile_content.html
@@ -3,8 +3,6 @@
 {% block content %}
 
 <div class="main-wrapper blog-grid-left-sidebar">
-
-
 <!-- ====================================
 ———	BLOG GRID LEFT SIDEBAR
 ===================================== -->
@@ -13,44 +11,15 @@
 		<div class="row">
 			<div class="col-md-8 col-lg-9 order-md-1">
 				<div class="row">
-
                     <div class="media media-avator-view flex-column flex-sm-row">
                       <div class="media-body">
-                        <a class="font-size-20 font-weight-medium d-inline-block mb-1" href="teachers-details.html">PROXIMAMENTE - Tu Contenido</a>
-
+                        <a class="font-size-20 font-weight-medium d-inline-block mb-1" href="">PROXIMAMENTE - Tu Contenido</a>
                              <span class="text-muted font-size-15 mb-1 d-block">
                                  Guarda contenido de manera descentralizada y forma parte del movimiento por un Internet libre. Un miembro del equipo de Acadmia Blockchain validará el contenido.
                                  Luego, podrás vincularlo con un curso/evento que organices o con un proceso de certificación.
                              </span>
-
-{#                          <hr>#}
                       </div>
                     </div>
-{#                <form>#}
-{#                    <div class="row">#}
-{#                      <div class="col-12">#}
-{#                        <div class="form-group form-group-icon">#}
-{#                          <i class="fa fa-smile-o"></i>#}
-{#                          <input type="text" class="form-control border-info" placeholder="Link a contenido guardado en Storj, LBRY, IPFS o SWARM">#}
-{#                        </div>#}
-{#                      </div>#}
-{##}
-{#                      <div class="col-12">#}
-{#                        <div class="form-group form-group-icon">#}
-{#                          <textarea class="form-control border-info" placeholder="Descripción del contenido guardado" rows="3"></textarea>#}
-{#                        </div>#}
-{#                      </div>#}
-{##}
-{#                      <div class="col-12">#}
-{#                        <div class="text-sm-center mt-6">#}
-{#                          <button type="submit" class="btn btn-danger text-uppercase">#}
-{#                            Guardar Cambios#}
-{#                          </button>#}
-{#                        </div>#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </form>#}
-
                 <div class="media media-avator-view flex-column flex-sm-row">
                       <div class="media-body">
                           <hr>
@@ -59,10 +28,8 @@
                          </span>
                       </div>
                 </div>
-
 				</div>
 			</div>
-
 			<div class="col-md-4 col-lg-3">
 				<div class="card shadow-none bg-transparent">
 					<h4 class="card-header font-weight-bold bg-success rounded-top text-white">Tu Perfil</h4>
@@ -71,20 +38,20 @@
 							<li class="mb-2">
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 " href="{% url 'profile_data' %}">Datos de Perfil</a>
 							</li>
-							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_security' %}">Seguridad</a>
-							</li>
-							<li class="my-2">
+                            <li class="my-2">
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_events' %}">Cursos y Eventos</a>
 							</li>
-							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_accreditation' %}">Acreditaciones</a>
-							</li>
+                            <li class="my-2">
+                                <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_bookmarks' %}">Favoritos</a>
+                            </li>
 							<li class="mt-2">
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_certificates' %}">Certificados</a>
 							</li>
                             <li class="mt-2">
 								<a class="font-weight-medium d-block border rounded py-2 pl-3 text-dark text-underline" href="{% url 'profile_content' %}">Contenido Descentralizado</a>
+							</li>
+							<li class="my-2">
+								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_security' %}">Seguridad</a>
 							</li>
 						</ul>
 					</div>
@@ -92,9 +59,7 @@
 			</div>
 		</div>
 	</div>
-
 </section>
-
 </div> <!-- element wrapper ends -->
 
 {% endblock content %}
