nueva imagen parallax

--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -5,7 +5,7 @@
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url('https://www.legalexecutiveinstitute.com/wp-content/uploads/2016/04/blockchain.jpg'); ">
+  <section class="breadcrumb-bg" style="background-image: url('https://www.processmaker.com/wp-content/uploads/2020/01/blockchain-technology-digital-code-chain_99236-110.jpg');">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
