--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -114,9 +114,9 @@
                         </li>
                     </ul>
 
-                    <p class="text-justify mb-lg-2">
-                        {{ event.description | safe }}
-                    </p>
+{#                    <p class="text-justify mb-lg-2">#}
+{#                        {{ event.description | safe }}#}
+{#                    </p>#}
 
 {#                    <div class="">#}
 {#                        <a href="" class="btn btn-sm btn-white text-uppercase mb-1 mr-4 btn-hover-success">#}
