cert requests filter bug

--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -31,7 +31,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="event_type_description" id="radio_live_course" value="live_course">
                   <label class="form-check-label" for="event_type_description">
-                    CURSO EN VIVO - <strong>Vas a dar el curso.</strong>
+                    CURSO ONLINE - <strong>Vas a dar el curso.</strong>
                   </label>
                 </div>
                 <div class="form-check">
