--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -69,7 +69,7 @@
                                 <p class="text-justify mb-lg-2">{{ c.event.description|truncatewords:100|safe }}</p>
 
                                 <div class="">
-                                    <a href="" class="btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-success">
+                                    <a href="" class="btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-info">
                                         <i class="fa fa-certificate mr-2" aria-hidden="true"></i>Ver Certificado
                                     </a>
                                 </div>
