edit event hour bug

--- a/templates/courses/event_edit.html
+++ b/templates/courses/event_edit.html
@@ -135,7 +135,7 @@
                     Hora
                 </label>
                 <input type="text" class="form-control timepicker" id="time_day" name="time_day"
-                        value="{{ event.date_end|date:"f A" }}"/>
+                        value="{{ event.date_end|date:"h:i A" }}"/>
             </div>
 
             <div class="form-group">
