help text edit event

--- a/templates/courses/event_edit.html
+++ b/templates/courses/event_edit.html
@@ -112,6 +112,9 @@
                 <input data-provide="datepicker" type="text" data-date-format="dd/mm/yyyy"
                        class="form-control"
                        id="record_date" name="record_date"/>
+                <small class="form-text text-muted">
+                  Aproximadamente, ¿cuándo publicaste la grabación?
+                </small>
             </div>
 
             <div class="form-group date" id="input_date_start">
