--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -33,7 +33,7 @@
 {#				 placeholder="Cursos / Eventos / Conversaciones" required="">#}
 {#                <div class="input-group-append">#}
 {#					<button type="submit" class="btn shadow-none btn-lg btn-info text-uppercase">Buscar</button>#}
-{#				</div> TODO FUNCIONALIDAD DE BUSQUEDA #}
+{#				</div> #}
 {#			</div>#}
 {#		</form>#}
         <div class="text-sm-right mt-6">
@@ -52,7 +52,7 @@
 
         {% for event in events %}
             <div class="media media-list-view mb-5">
-{#                {% if event.event_type == "COURSE" %}#}
+{#                {% if event.event_type == "COURSE" %} Mostrar imagen del evento #}
 {#                    <a class="media-img" href="{% url 'event_detail' %}">#}
 {#                    <img src= "https://www.tornadobitcoin.com/wp-content/uploads/2020/01/Untitled-design.png" alt="Image">#}
 {#                    <div class="media-img-overlay">#}
