--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -6,6 +6,7 @@
 ===================================== -->
 <section class="py-8 pt-md-10">
 	<div class="container">
+        <h3 class="card-title text-dark">* <strong>{{ event.title }} ha sido eliminado por el propietario</strong> *</h3>
         {% if is_event_owner %}
             <h3 class="card-title text-dark">Tu <strong>{{ event.title }}:</strong></h3>
             <div class="accordion mb-8" id="accordionExample">
